<resources>
    <string name="app_name">Clientes Nuevos</string>

    <!-- Strings related to login -->
    <string name="prompt_user">Usuario</string>
    <string name="prompt_name">Nombre</string>
    <string name="prompt_rif">Rif</string>
    <string name="prompt_tel">Teléfono</string>
    <string name="prompt_mail">Email</string>
    <string name="prompt_mailO">Email (Opcional)</string>
    <string name="prompt_dir">Dirección</string>
    <string name="prompt_obs">Observación</string>
    <string name="prompt_gru">Grupo por zona</string>
    <string name="prompt_save">Guardar</string>
    <string name="prompt_por">Porcentaje</string>
    <string name="prompt_asu">Asunto</string>
    <string name="prompt_msg">Mensaje</string>
    <string name="prompt_password">Clave</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Iniciar sesion</string>
    <string name="error_invalid_email">Esta dirección de correo electrónico no es válida.</string>
    <string name="error_invalid_password">Esta contraseña es demasiado corta</string>
    <string name="error_incorrect_password">Esta contraseña es incorrecta</string>
    <string name="error_field_required">Este campo es requerido</string>
    <string name="permission_rationale">"Se necesitan permisos de contactos para proporcionar correo electrónico
         terminaciones."
    </string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fab_description">FAB button description</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_main2">Main2Activity</string>
</resources>
